--- a/Section 5 - Intermediate CSS/CSS - My Site/css/styles.css
+++ b/Section 5 - Intermediate CSS/CSS - My Site/css/styles.css
@@ -1,76 +1,180 @@
-.top-container 
-{
-    background-color:#E4F9F5;
+.top-container {
+    background-color: #E4F9F5;
     /* background:url("https://images.unsplash.com/photo-1575936123452-b67c3203c357?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aW1hZ2V8ZW58MHx8MHx8&w=1000&q=80"); */
     /* height:200px;
     width:200px;
     padding:20px;
     border:10px solid; */
     position: relative;
-    padding-top:100px;
+    padding-top: 100px;
 }
 
-body 
-{
-    margin:0px;
+body {
+    margin: 0px;
     /* text-align:center;   this works only when no width has been set and this works only for inline block as well as block elements */
     text-align: center;
-    font-family: Avant Garde, Avantgarde, Century Gothic, CenturyGothic, AppleGothic, sans-serif;
-
+    /* font-family: Avant Garde, Avantgarde, Century Gothic, CenturyGothic, AppleGothic, sans-serif; */
+    font-family: 'Merriweather', serif;
+    /* font-size: 2em; */
+    color:#40514E;
 }
 
-h1 
+hr 
 {
-    margin-top:0px;
+    height:0px;
+    border-style:dotted none none none;
+    border-width: 12px;
+    width: 10%;
+    border-color: #c4d8d8;
+    /* margin:20px; */
+}
+
+h1 {
+    margin-top: 0px;
     /* padding-top:125px; */
     /* width:10%; */
     /* margin:0 auto 0 auto; works to center only when a width has been defined for the elements */
     /* width:10%; */
     /* margin:0 auto 0 auto; */
     /* width:20%; */
-    
+    font-family: 'Sacramento', cursive;
+    font-size: 5.625rem;
+    /* 1em = 16px = 100%, if body has another font size and we use em then this em gets applied on top of body em and 
+    we get large sizes, to prevent this we use rem or root em, 1rem = 16px irrespective of parent container font size */
+    margin: 50px auto 0 auto;
+    color: #66BFBF;
+    line-height: 2;
 }
 
-.middle-container, .bottom-container
-{
-    height:200px;
-    width:200px;
+h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    color: #66BFBF;
+    font-weight: normal;
 }
 
-.middle-container
-{
-    background-color:red;
-    /* border:20px solid black;
-    margin-left:260px; */
+h3 {
+    font-family: 'Montserrat', sans-serif;
+    color: #11999E;
 }
 
-.bottom-container
-{
-    background-color:blue;
-    /* border:10px solid black;
-    margin-left:500px; */
+a {
+    color: #11999E;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+
 }
 
-.pro 
+a:hover 
 {
-    text-decoration:underline;
+    color:#EAF6F6;
 }
 
-.bottom-cloud, .top-cloud 
-{
+.middle-container {}
+
+.bottom-container {
+
+    background-color: #66BFBF;
+    margin-top:100px;
+    padding:40px;
+}
+
+.pro {
+    text-decoration: underline;
+}
+
+.bottom-cloud,
+.top-cloud {
     /* position:absolute; this takes the element out of the flow of html document */
     position: absolute;
-    
+
 }
 
-.top-cloud
-{
-    top:50px;
-    right:300px;
+.top-cloud {
+    top: 50px;
+    right: 300px;
 }
 
-.bottom-cloud 
-{
-    left:300px;
-    bottom:300px;
+.bottom-cloud {
+    left: 300px;
+    bottom: 300px;
 }
+
+.skill-row 
+{
+    width:50%;
+    margin:100px auto 100px auto;
+    text-align:left;
+    line-height: 2;
+}
+
+.codeforces
+{
+    width:25%;
+    float:left;
+    margin-right: 30px;
+    /* float makes the content go and float to the mentioned respective sides */
+}
+
+.web-development 
+{
+    width: 25%;
+    float:right;
+    margin-left:30px;
+}
+
+.cp 
+{
+    clear:left;
+    /* clear can be thought of as the anti float, it basically clears left portion of the part which we mention. */
+}
+
+.web-d 
+{
+    clear:right;
+
+    /* if we do clear:left on this element as well then nothing will change as it is not wrapping anything around its left side but only towards its right side */
+
+}
+
+/* float property should only be used for what its purpose is and that is to wrap text around an object 
+it should never be used for positioning purposes, rather the position property should be used for posi
+tioning, hence float should never be used as a layout property*/
+
+.hridyansh 
+{
+    height:200px;
+    margin-top:50px;
+}
+
+.btn {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+  }
+
+  .footer-link 
+  {
+    padding:30px;
+  }
